# ThesisMaster

./: .gitignore  Makefile  README.md  SystemComponents  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  smoke_pipeline.yml
Evaluation/: README.md
Evaluation/00_pipeline_orchestration/: README.md  run_pipeline.py  run_pseudodata_to_impact.py
Evaluation/01_pseudoprofile(s)/free_text/: free_text_context.txt  free_text_person.txt
Evaluation/01_pseudoprofile(s)/time_series_data/: create_pseudodata.py  visualize_time_series.py
Evaluation/06_quality_assurance/: README.md  validate_contract_schemas.py
Evaluation/06_quality_assurance/tests/: conftest.py
Evaluation/07_research_communication/: README.md  generate_pipeline_research_report.py
SystemComponents/Hierarchical_Updating_Algorithm/01_time_series_analysis/: README.md
evaluation/: README.md
evaluation/00_pipeline_orchestration/: README.md  iterative_cycle_dataflow.py  run_pipeline.py  run_pseudodata_to_impact.py
evaluation/01_pseudoprofile(s)/free_text/: free_text_complaints.txt
evaluation/01_pseudoprofile(s)/time_series_data/: create_pseudodata.py  visualize_time_series.py
evaluation/02_mental_health_issue_operationalization/: mapped_criterions.csv
evaluation/06_quality_assurance/: validate_contract_schemas.py
evaluation/07_research_communication/: README.md  generate_pipeline_research_report.py
frontend/: README.md  __init__.py  app.py
frontend/phoenix_frontend/: __init__.py  config.py
src/: README.md
src/overview/: README.md
src/utils/other/: tempo  (+1 more)
(+964 files in other folders)
