[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-engine-thesis"
version = "0.1.0"
description = "PHOENIX Engine research pipeline for personalized hierarchical mental health optimization."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Stijn Van Severen" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "networkx>=3.2",
  "joblib>=1.3",
  "pydantic>=2.8",
  "openai>=1.51",
  "python-dotenv>=1.0",
  "jsonschema>=4.22",
  "pyarrow>=16.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["Evaluation/06_quality_assurance/tests"]
markers = [
  "unit: fast unit-level tests for deterministic logic.",
  "integration: cross-component integration tests.",
  "smoke: heavier end-to-end smoke tests (opt-in).",
]
addopts = "-ra"
